tests/baselines/reference/typingsSuggestionBun2.errors.txt
a.ts(1,14): error TS2304: Cannot find name 'Bun'.


==== tsconfig.json (0 errors) ====
    { "compilerOptions": {} }
    
==== a.ts (1 errors) ====
    const file = Bun.file("/a.ts");
                 ~~~
!!! error TS2304: Cannot find name 'Bun'.
    